# Orion

./: .gitignore  .prettierignore  ARCHITECTURE.md  DEMO.md  Dockerfile  README.md  TRACKING.md  docker-compose.yml  eslint.config.js  index.html  lefthook.yml  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package-lock.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/features/ground-station/: passPrediction.ts
frontend/src/features/orbital-mechanics/: types.ts
frontend/src/features/osint-intelligence/: index.ts  ucs-database.ts
frontend/src/features/space-weather/: noaa-spot.ts
frontend/tests/: perf-smoke.spec.ts
src/: App.tsx  index.css
src/features/ground-station/: passPrediction.ts
src/features/orbital-mechanics/: index.ts  orbitUtils.ts
src/features/osint-intelligence/: entityResolver.ts  ucs-database.ts
src/features/spatial-rendering/: index.ts
src/features/telemetry-ingestion/: index.ts
src/features/ui-shell/: FilterPanel.tsx  SatelliteDetailPanel.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  VirtualizedCatalogTable.tsx
src/shared/store/: filters.store.ts  observer.store.ts  selection.store.ts  ui.store.ts
src/shared/types/: index.ts  rendering.ts
src/shared/utils/: astro.ts  fetchRetry.ts
tests/: perf-smoke.spec.ts
wasm-src/: Cargo.toml
wasm-src/src/: lib.rs
(+47 files in other folders)
