[package]
name = "orion-propagator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sgp4 = { version = "2", features = ["serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
chrono = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# wasm-opt is downloaded by wasm-pack at build time;
# disable auto-download so offline/CI environments can supply it themselves.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
